# LaserIMD_simulation

./: LICENSE.md  README.md
executables/: README.md
executables/EDFS_Doublet/: EDFS_Doublet.txt
executables/EDFS_Doublet_Triplet/: EDFS_Doublet_EO.txt  EDFS_Doublet_Porph.txt  EDFS_Doublet_att12.txt  EO_result.txt  porph_result.txt
executables/EDFS_Triplet/: EDFS_EO.txt  EDFS_RB.txt  EDFS_att12.txt  porph_result.txt
executables/Echo_Doublet/: Echo_Doublet.txt
executables/LaserIMD/: LaserIMD_Doublet_Porph.txt  LaserIMD_Doublet_RB.txt  LaserIMD_Doublet_att12.txt  LaserIMD_RB_result.txt  Porph_result.txt  att12.txt
executables/grid/: Ci_100.txt  Ci_101.txt  Ci_103.txt  Ci_105.txt  Ci_106.txt  Ci_111.txt  Ci_115.txt  Ci_116.txt  Ci_120.txt  Ci_121.txt  Ci_125.txt  Ci_129.txt  Ci_13.txt  Ci_131.txt  Ci_132.txt  Ci_133.txt  Ci_135.txt  (+115 more)
program/: Explanation.txt  Lib.lib
source_code/: CMakeLists.txt  EDFS_Doublet.cpp  EDFS_Doublet_Triplet.cpp  EDFS_Nitroxide.cpp  EDFS_Triplet.cpp  Echo_Doublet.cpp  Echo_Nitroxide.cpp  Echo_Triplet.cpp  LaserIMD.cpp
source_code/grid/: Ci_10.txt  Ci_102.txt  Ci_107.txt  Ci_108.txt  Ci_110.txt  Ci_112.txt  Ci_113.txt  Ci_114.txt  Ci_119.txt  Ci_123.txt  Ci_124.txt  Ci_127.txt  Ci_134.txt  Ci_136.txt  Ci_14.txt  Ci_141.txt  Ci_142.txt  Ci_145.txt  Ci_151.txt  Ci_154.txt  Ci_158.txt  Ci_159.txt  Ci_163.txt  Ci_167.txt  Ci_168.txt  Ci_17.txt  Ci_174.txt  Ci_175.txt  Ci_180.txt  Ci_19.txt  Ci_2.txt  Ci_21.txt  Ci_28.txt  Ci_32.txt  Ci_34.txt  Ci_35.txt  Ci_36.txt  Ci_39.txt  Ci_43.txt  Ci_44.txt  (+94 more)
source_code/lib/: P_lists.h  cfloat.h  constants.h  functions.h  grid.h  load_parameters.h  log_trace.h  plot_result.cpp  simulate.h  spin_system.h  typedefs.h
(+123 files in other folders)
